--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Live Character Counter</title>
-    <link rel="stylesheet" href="1.2.1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <main class="container">
-        <h1>Character Counter</h1>
+<div class="container">
+    <h2>Live Character Counter</h2>
 
-        <textarea
-            id="textInput"
-            placeholder="Type your text here..."
-            maxlength="150"></textarea>
+    <textarea 
+        id="textInput" 
+        placeholder="Start typing..."
+        maxlength="200">
+    </textarea>
 
-        <p class="counter">
-            <span id="count">0</span> / 150 characters
-        </p>
-    </main>
+    <div class="counter">
+        <span id="charCount">0</span> / 200 characters
+    </div>
+</div>
 
-    <script src="1.2.1.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
